--- a/app/views/index.html
+++ b/app/views/index.html
@@ -2,29 +2,25 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  GOV.UK Prototype Kit
+GOV.UK Prototype Kit
 {% endblock %}
 
 {% block content %}
 
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-xl">
-        The GOV.UK Prototype Kit
-        <span class="govuk-caption-xl">{{releaseVersion}}</span>
-      </h1>{{releaseVersion | log }}
-      <p>
-        This kit lets you rapidly create HTML prototypes of GOV.UK services.
-      </p>
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds">
+    <h1 class="govuk-heading-xl">
+      Pauls Prototype Kit
+    </h1>
 
-      <p>
-        It contains all you need to prototype anything from simple static pages to complex, data-driven transactions.
-      </p>
+    <p>
+      It contains all you need to prototype anything from simple static pages to complex, data-driven transactions.
+    </p>
 
-      <h2 class="govuk-heading-m">About this page</h2>
+    <h2 class="govuk-heading-m">About this page</h2>
 
-      <p>We recommend you add links to your prototype to this page, rather than delete it.
-        You'll find this page in the kit at '/app/views/index.html'.</p>
+    <p>We recommend you add links to your prototype to this page, rather than delete it.
+      You'll find this page in the kit at '/app/views/index.html'.</p>
 
       <p>You can change the service name by editing the file '/app/config.js'.</p>
 
@@ -41,4 +37,4 @@
     </div>
   </div>
 
-{% endblock %}
+  {% endblock %}
